# anime-recommender

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.simple  FULL_DOCUMENTATION.md  README.md  k8s-secrets-README.md  llmops-k8s.yaml  pyproject.toml
config/: config.py  parse_arguments.py
pipeline/: build_pipeline.py  pipeline.py
src/: vector_store.py
